# free-public-apis-sdk

./: AGENTS.md  CHANGELOG.md  CLAUDE.md  Makefile  README.md  SECURITY.md
.sdk/: package-lock.json  package.json
go/: AGENTS.md  CLAUDE.md  README.md  REFERENCE.md  free-public-apis.go  go.mod
go-cli/: .gitignore  Makefile  README.md  go.mod  main.go  words.go
go-mcp/: .gitignore  Makefile  README.md  go.mod  main.go  tools.go
lua/: AGENTS.md  CLAUDE.md  README.md  REFERENCE.md  config.lua  features.lua  free-public-apis.rockspec  free-public-apis_sdk.lua  free-public-apis_types.lua
php/: AGENTS.md  CLAUDE.md  README.md  REFERENCE.md  composer.json  config.php  features.php  freepublicapis_sdk.php
py/: AGENTS.md  CLAUDE.md  README.md  REFERENCE.md  config.py  features.py  freepublicapis_sdk.py  freepublicapis_types.py  pyproject.toml
py/core/: control.py  helpers.py  operation.py  response.py  spec.py
py/entity/: ap_i_entity.py
py/feature/: audit_feature.py  base_feature.py  cache_feature.py  idempotency_feature.py  log_feature.py  metrics_feature.py  netsim_feature.py  proxy_feature.py  test_feature.py
py/test/: runner.py  test_ap_i_direct.py  test_ap_i_entity.py  test_exists.py  test_feature.py  test_netsim.py  test_pipeline.py  test_primary_utility.py  test_readme_examples.py
py/utility/: done.py  feature_add.py  feature_init.py  make_error.py  make_fetch_def.py  make_options.py  make_point.py  make_request.py  make_response.py  make_result.py  param.py  prepare_auth.py  prepare_headers.py  prepare_method.py  result_body.py  transform_request.py
(+411 files in other folders)
